@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.streamlink-tester" name="Streamlink Tester" version="1.5.2" provider-name="Twilight0">
+<addon id="plugin.video.streamlink-tester" name="Streamlink Tester" version="1.5.3" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.26.0"/>
-        <import addon="script.module.tulip" version="2.3.7"/>
-        <import addon="script.module.streamlink.base" version="2019.05.08"/>
+        <import addon="script.module.tulip" version="2.5.10"/>
+        <import addon="script.module.streamlink.base" version="2020.02.22"/>
         <import addon="script.module.youtube.dl" version="18.619.0" optional="true"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="main.py">
@@ -20,7 +20,10 @@
         <website>https://twitter.com/TwilightZer0</website>
         <source>https://github.com/Twilight0/plugin.video.streamlink-tester</source>
         <size>106257</size>
-        <news>[B]1.5.2[/B] - 11-11-2019
+        <news>[B]1.5.3[/B] - 01-03-2020
+- Some logging tweaks
+
+[B]1.5.2[/B] - 11-11-2019
 - Enhanced context menu items
 - Added sleep when doing file operations (useful for slower devices)
 - Bug fixes, mostly player related
