@@ -1,3 +1,6 @@
+[B]1.5.3[/B] - 01-03-2020
+- Some logging tweaks
+
 [B]1.5.2[/B] - 11-11-2019
 - Enhanced context menu items
 - Added sleep when doing file operations (useful for slower devices)
